--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="mystyle.css">
 <style>
   html,
   body,
@@ -20,6 +21,144 @@
 
   .w3-tag {
     margin-top: 5px;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  /* Set a background color */
+  body {
+    background-color: #474e5d;
+    font-family: Helvetica, sans-serif;
+  }
+
+  /* The actual timeline (the vertical ruler) */
+  .timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  /* The actual timeline (the vertical ruler) */
+  .timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: rgb(250, 35, 118);
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+  }
+
+  /* Container around content */
+  .container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+  }
+
+  /* The circles on the timeline */
+  /* .container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 6px solid #FF9F55;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+} */
+
+  /* Place the container to the left */
+  .left {
+    left: 0;
+  }
+
+  /* Place the container to the right */
+  .right {
+    left: 50%;
+  }
+
+  /* Add arrows to the left container (pointing right) */
+  .left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+  }
+
+  /* Add arrows to the right container (pointing left) */
+  .right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Fix the circle for containers on the right side */
+  .right::after {
+    left: -16px;
+  }
+
+  /* The actual content */
+  .content {
+    padding: 20px 30px;
+    background-color: #009688;
+    position: relative;
+    border-radius: 6px;
+    color: white;
+  }
+
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+
+    /* Place the timelime to the left */
+    .timeline::after {
+      left: 31px;
+    }
+
+    /* Full-width containers */
+    .container {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+    }
+
+    /* Make sure that all arrows are pointing leftwards */
+    .container::before {
+      left: 60px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent;
+    }
+
+    /* Make sure all circles are at the same spot */
+    .left::after,
+    .right::after {
+      left: 15px;
+    }
+
+    /* Make all right containers behave like the left ones */
+    .right {
+      left: 0%;
+    }
   }
 </style>
 
@@ -117,22 +256,57 @@
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+          <div class="timeline">
+            <div class="container left">
+              <div class="content">
+                <h2>2019 - present</h2>
+
+                <p class="w3-large"><b><i class="fa fa-code fa-fw w3-margin-right w3-text-teal"></i>.Net / Angular Developer</b>
+                <p>At Betagro Public Company Limited</p>
+              </div>
+            </div>
+            <div class="container right">
+              <div class="content">
+                <h2>2009 - 2018</h2>
+                <p class="w3-large"><b><i class="fa fa-code fa-fw w3-margin-right w3-text-teal"></i>.Net Developer</b>
+                <p>At Betagro Public Company Limited</p>
+              </div>
+            </div>
+            <div class="container left">
+              <div class="content">
+                <h2>2008 - 2009</h2>
+                <p class="w3-large"><b><i class="fa fa-code fa-fw w3-margin-right w3-text-teal"></i>Bachelor of Science - Information Technology at School of Information</b>
+                <!-- <p>Bachelor of Science - Information Technology at School of Information -->
+                <p>At Technology King Mongkut’s University of Technology Thonburi,Bankkok.</p>
+              </div>
+            </div>
+            <div class="container right">
+              <div class="content">
+                <h2>2006 - 2007</h2>
+                <p class="w3-large"><b><i class="fa fa-code fa-fw w3-margin-right w3-text-teal"></i>High Vocational Certificate - Techni Computer</b>
+                <p>At Samutprakan Technical College.</p>
+              </div>
+            </div>
+          </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Senior System Analyst Front End Back End Developer / At Betagro Public Company Limited</b></h5>
+            <h5 class="w3-opacity"><b>Senior System Analyst Front End Back End Developer / At Betagro Public Company
+                Limited</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-teal w3-round">Present</span></h6>
-                <p>Front-end Back-end Web Developer , Trace Me</p>
-                <p>Front-end Back-end Web Developer and Azure DevOps CICD, Consent PDPA</p>
-                <p>Front-end Back-end Web Developer and Azure DevOps CICD, Customer Onboarding ( Before making on Mendix )</p>
-                <p>ETL SSIS, Checklist Invoice</p>
-                <p>ETL SSIS, Interface POS Invoice To SAP</p>
-                <p>ETL SSIS, Interface Bank Statement Type FCD</p>
+            <p>Front-end Back-end Web Developer , Trace Me</p>
+            <p>Front-end Back-end Web Developer and Azure DevOps CICD, Consent PDPA</p>
+            <p>Front-end Back-end Web Developer and Azure DevOps CICD, Customer Onboarding ( Before making on Mendix )
+            </p>
+            <p>ETL SSIS, Checklist Invoice</p>
+            <p>ETL SSIS, Interface POS Invoice To SAP</p>
+            <p>ETL SSIS, Interface Bank Statement Type FCD</p>
             <!-- <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
               sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p> -->
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Senior System Analyst Front End Back End Developer / At Betagro Public Company Limited</b></h5>
+            <h5 class="w3-opacity"><b>Senior System Analyst Front End Back End Developer / At Betagro Public Company
+                Limited</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2019 - Dec 2019</h6>
             <p>Front-end Back-end Web Developer , Incentive</p>
             <p>ETL SSIS, Interface E-Trace</p>
@@ -153,13 +327,15 @@
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>2009 Bachelor of Science - Information Technology</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>School of Information Technology King Mongkut’s University of Technology Thonburi,Bankkok.</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>School of Information
+              Technology King Mongkut’s University of Technology Thonburi,Bankkok.</h6>
             <!-- <p>School of Information Technology King Mongkut’s University of Technology Thonburi,Bankkok.</p> -->
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>2006 High Vocational Certificate - Techni Computer</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>Samutprakan Technical College.</h6>
+            <h6 class="w3-text-teal"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>Samutprakan Technical
+              College.</h6>
             <!-- <p>Master Degree</p> -->
             <hr>
           </div>
