update time line

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               </div>
             </div>
           </div>
-          <div class="w3-container">
+          <!-- <div class="w3-container">
             <h5 class="w3-opacity"><b>Senior System Analyst Front End Back End Developer / At Betagro Public Company
                 Limited</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
@@ -300,8 +300,8 @@
             <p>ETL SSIS, Checklist Invoice</p>
             <p>ETL SSIS, Interface POS Invoice To SAP</p>
             <p>ETL SSIS, Interface Bank Statement Type FCD</p>
-            <!-- <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
-              sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p> -->
+            <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
+              sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
             <hr>
           </div>
           <div class="w3-container">
@@ -311,15 +311,16 @@
             <p>Front-end Back-end Web Developer , Incentive</p>
             <p>ETL SSIS, Interface E-Trace</p>
             <p>ETL SSIS, Interface Invoice PDFFile,TextFile and SendMail</p>
-            <!-- <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
-              sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p> -->
+            <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
+              sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
             <hr>
           </div>
-          <!-- <div class="w3-container">
+          <div class="w3-container">
             <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
           </div> -->
+
         </div>
 
         <div class="w3-container w3-card w3-white">
@@ -329,7 +330,7 @@
             <h5 class="w3-opacity"><b>2009 Bachelor of Science - Information Technology</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>School of Information
               Technology King Mongkut’s University of Technology Thonburi,Bankkok.</h6>
-            <!-- <p>School of Information Technology King Mongkut’s University of Technology Thonburi,Bankkok.</p> -->
+            <p>School of Information Technology King Mongkut’s University of Technology Thonburi,Bankkok.</p>
             <hr>
           </div>
           <div class="w3-container">
